--- a/style.css
+++ b/style.css
@@ -9415,7 +9415,7 @@ div.cell.selected.jupyter-soft-selected {
 }
 .prompt {
   /* This needs to be wide enough for 3 digit prompt numbers: In[100]: */
-  /* blp: min-width: 14ex; */
+  min-width: 14ex;
   /* This padding is tuned to match the padding on the CodeMirror editor. */
   padding: 0.4em;
   margin: 0px;
@@ -9438,6 +9438,11 @@ div.cell.selected.jupyter-soft-selected {
     text-align: left;
   }
 }
+/* blp */
+.text_cell .prompt {
+  min-width: 0;
+}
+
 div.inner_cell {
   /* Old browsers */
   display: -webkit-box;
